<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeLLFragment">
    <ImageView
        android:id="@+id/PimageView"
        android:src="@drawable/profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="1dp"
        />

    <TextView

        android:layout_width="wrap_content"
        android:text="@string/condition"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="130dp"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="170dp"
        android:id="@+id/radioG"

        >
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbtnnew"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/New"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="center"
            android:checked="false"
            android:background="@drawable/radiobnewselector"
            />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbtnused"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/used"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="center"
            android:checked="false"
            android:background="@drawable/radiobusedselector"
            />



    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="250dp"
        android:id="@+id/productname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"

        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Product Name"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="330dp"
        android:layout_marginRight="30dp"
        android:gravity="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/location"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="400dp"
        android:layout_marginRight="30dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/click_for_location"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btnnext"
            android:layout_marginTop="30dp"
            android:text="@string/next"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>



</FrameLayout>